tests/config_module_system_node_resolve_dirname/config_module_system_node_resolve_dirname.exp
Error ------------------------------------------------------------------------------------------- subdir/sublevel.js:3:2

Cannot cast `name` to string literal `node_modules/testproj2` because string literal
`subdir/custom_resolve_dir/testproj2` [1] is incompatible with string literal `node_modules/testproj2` [2].
[incompatible-cast]

   subdir/sublevel.js:3:2
   3| (name: "node_modules/testproj2"); // Error: Resolve from sibling 'custom_resolve_dir' first!
       ^^^^

References:
   subdir/custom_resolve_dir/testproj2/index.js:1:18
   1| export var name: "subdir/custom_resolve_dir/testproj2" = "subdir/custom_resolve_dir/testproj2";
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   subdir/sublevel.js:3:8
   3| (name: "node_modules/testproj2"); // Error: Resolve from sibling 'custom_resolve_dir' first!
             ^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- toplevel.js:4:2

Cannot cast `name` to string literal `custom_resolve_dir/testproj` because string literal `node_modules/testproj` [1] is
incompatible with string literal `custom_resolve_dir/testproj` [2]. [incompatible-cast]

   toplevel.js:4:2
   4| (name: "custom_resolve_dir/testproj"); // Error: Resolve from node_modules first!
       ^^^^

References:
   node_modules/testproj/index.js:1:18
   1| export var name: "node_modules/testproj" = "node_modules/testproj";
                       ^^^^^^^^^^^^^^^^^^^^^^^ [1]
   toplevel.js:4:8
   4| (name: "custom_resolve_dir/testproj"); // Error: Resolve from node_modules first!
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]



Found 2 errors
